style.css
/*CSS variables*/

:root {
    --primary-color: #2F5BB6;
    --secondary-color: #fdf954;
    --bg-white: white;
    --bg-grey: #f2f5fa;
    --text-color: #000000;
    --brand-font: "Bebas Neue";

}

body {
    background-color: var(--bg-white); 
    /* had to include this as a weird 8px margin seems to be applied by default by browsers */
    margin: 0;
    padding: 16px;
}

hr {
    margin: 0;
    width:80px;
    align: left;
    border-width:4px;
    border-style:solid;
    color: var(--secondary-color);
    text-align: left;
}

h1{
font-family: var(--brand-font);
font-size: 96px;
color:var(--primary-color);
/* negative letter spacing for tighter kerning at bigger font sizes*/
letter-spacing: -1px;
margin-bottom: 16px;
}

h2{
font-family: var(--brand-font);
font-size: 64px;
color:var(--text-color);
}

/*  */
header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: var(--bg-white);
}

a {
    color: black;
}

/* Using flexbox for the header keeps the logo in line with the nav links*/
/* Becky McG logo image on left of header */
#logo {
    width: 160px;
    /* commented out below when using logo2 instead of logo */
    /* height: 104px;*/
    padding: 16px;
}

#logo:hover {
    scale: 1.10;
    transform: rotate(-20deg);
}

/* Links for the nav */
.nav-list {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin: 16px 16px;
    padding: 8px;
    gap: 16px 24px;
    list-style: none;
    justify-content: space-around;
}

.nav-list li a {
    flex: 0 1 200px ;
    color:black;
    text-align: center;
    font-size: 40px;
    font-weight: 900;
    text-transform: uppercase;
    font-family: "Bebas Neue", Helvetica, Arial, sans-serif;
    text-decoration: none;
}

.nav-list li a:hover {
    color: var(--primary-color);
    border-bottom: 4px solid #2F5BB6;
}

.nav-list li a:active {
    color: var(--primary-color);
    background-color: var(--secondary-color);
    border-bottom: 4px solid var(--primary-color);
}

/* links & hover states */
a:hover {
    color: var(--primary-color);
}

a:active {
    color: var(--primary-color);
    background-color: var(--secondary-color);
}

i:hover {
    scale: 1.10;
}

i:active {
    scale: 0.95;
}
/* Hero image for the intro section */
#hero{
    background: linear-gradient(to left, transparent, var(--primary-color) ), url(images/about.jpg);
    background-repeat: no-repeat;
    height: 600px;
    background-position-y: 25%;
    background-size: cover;
    padding: 24px;
    margin-bottom: 32px;

    /* This is so unbelievably hacky! Shrinking down viewport shifts the h2 off screen to the left*/
    /* Was having so many problems with the h2 extending the page width to the right and couldn't figure out how to fix it! */
    display:flex;
    flex-flow: column wrap-reverse;
    justify-content: space-between;
}

/* could really do with using media queries to hide and adjust sizes for different screen widths */
#hero h1 {
    color:var(--secondary-color);
    position:relative;
    top: 30%;
    font-size: 10rem;
    letter-spacing: -1px;
    line-height:8rem;
    margin-bottom:16px;
    flex-wrap: 1 0 20px;
    padding: 10px;
}

#hero h2 {
    flex-wrap: 1 0 0;
    color: var(--bg-white);
    padding: 0 16px;
    height: max-content;
    position: relative;
    margin-top: 24px;
    font-size: 3rem;
}

footer {
    background-color: var(--secondary-color);
    padding: 24px;
}

#about {
    padding: 16px 42px;
}

h3 {
    font-size: 32px;
    margin-bottom: 16px;
}

p {
    font-size: 24px;
    max-width: 600px;
}

